--- a/frontend/src/components/DashboardComponent.scss
+++ b/frontend/src/components/DashboardComponent.scss
@@ -17,7 +17,7 @@
 
         .navbar {
             width: 100%;
-            height: 70px;
+            padding: 20px 10px;
             background-color: $grey;
         }
     
